--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script>
         alert("hello, world!");
     </script>
+    <script type="text/javascript">
+      alert("hello, eu!")
+    </script>
   </head>
   <body>
     <h1>Hello, world!</h1>
